@@ -14,7 +14,12 @@ de données dynamique (API aviationstack.com).
 
   https://openjfx.io/openjfx-docs/#install-java
   
-#### Configuration 
-.vscode/launch
+#### Configuration de fichier sous Vscode
+
+Générer un fichier de config :
+  lunch.java
+***
+"vmArgs": "--module-path \"C:\\Program Files\\Java\\javafx-sdk-19\\lib\" --add-modules javafx.controls,javafx.fxml"
+***
   
 
